# adndtk

./: .gitignore  BACKLOG.md  CMakeLists.txt  CREDITS.md  LICENSE.md  README.md  REQUISITES.md
cli/: CMakeLists.txt  README.md  cli_menu.h  cli_options.cpp  cli_options.h  cli_validator.cpp  cli_validator.h  main.cpp
config/: LICENSE.md.in  config.h.in  load_monster_data_staging.sqlite.in  load_monster_data_staging_al_qadim.sqlite.in  load_monster_data_staging_dark_sun.sqlite.in  load_monster_data_staging_dragonlance.sqlite.in  load_monster_data_staging_forgotten_realms.sqlite.in  load_monster_data_staging_greyhawk.sqlite.in  load_monster_data_staging_kara_tur.sqlite.in  load_monster_data_staging_mystara.sqlite.in  load_monster_data_staging_planescape.sqlite.in  load_monster_data_staging_ravenloft.sqlite.in  load_monster_data_staging_spelljammer.sqlite.in
demo/: CMakeLists.txt  demo.cpp
json/: dictionary_config.json  orm_mapping.json  queries.json  tables_info.json
monsters_pack/: CMakeLists.txt
monsters_pack/al_qadim/: CMakeLists.txt  monsters.sql  monsters_data-2129.csv
monsters_pack/dark_sun/: CMakeLists.txt  monsters.sql  monsters_data-2405.csv
monsters_pack/dragonlance/: CMakeLists.txt  monsters.sql  monsters_data-2105.csv
monsters_pack/forgotten_realms/: CMakeLists.txt  monsters.sql  monsters_data-2125.csv
monsters_pack/greyhawk/: CMakeLists.txt  monsters.sql  monsters_alignment.sql
monsters_pack/kara_tur/: CMakeLists.txt  monsters.sql  monsters_data-2116.csv
monsters_pack/mystara/: CMakeLists.txt  monsters.sql  monsters_ac.sql  monsters_alignment.sql  monsters_appearing.sql  monsters_data-2501.csv  monsters_diet.sql  monsters_movement.sql  monsters_treasure.sql
monsters_pack/planescape/: CMakeLists.txt  monsters.sql  monsters_data-2602.csv
monsters_pack/ravenloft/: CMakeLists.txt  monsters.sql  monsters_data-2153.csv
monsters_pack/spelljammer/: CMakeLists.txt  monsters.sql  monsters_data-2119.csv
py/: CMakeLists.txt  common.py  defs_h.json  dictionary_config.json  generate_defs.py  generate_dictionary.py  generate_header.py  generate_queries.py  generate_tables.py  json-to-csv.py  json_to_csv.py  load_monster_data_staging.sqlite  monsters_data.csv  orm_mapping.json  tables_info.json
sql/: CMakeLists.txt  base.sql  data.sql  deities.sql  equipment.sql  geography.sql  indexes.sql  monsters.sql  monsters_ac.sql  monsters_activity_cycle.sql  monsters_alignment.sql  monsters_appearing.sql  monsters_climate_terrain.sql  monsters_data-2139.csv  monsters_data.csv  monsters_diet.sql  monsters_movement.sql  monsters_organisation.sql  monsters_treasure.sql  monsters_variant.sql  roll_of_the_years.sql  saving.sql  schema.sql  spells.sql  treasure.sql  undead.sql
sql/greyhawk/: CMakeLists.txt  monsters.sql  monsters_data-2107.csv
sql/ravenloft/: CMakeLists.txt  monsters.sql  monsters_data-2122.csv
src/: CMakeLists.txt  adnd_errors.cpp  adnd_errors.h  adndtk.cpp  adndtk.h  advancement_table.cpp  advancement_table.h  avatar.h  battlefield.cpp  battlefield.h  battleground.cpp  battleground.h  calendar.cpp  calendar.h  character.cpp  character.h  character_generator.cpp  character_generator.h  coin.cpp  coin.h  coin_exchange.cpp  coin_exchange.h  common_types.cpp  common_types.h  config.h.in  cyclopedia.cpp  cyclopedia.h  data_validator.cpp  data_validator.h  dice.cpp  dice.h  encumbrance.cpp  encumbrance.h  experience.cpp  experience.h  hit_points.cpp  hit_points.h  holy_symbol.cpp  holy_symbol.h  inventory.cpp  (+38 more)
test/: CMakeLists.txt  test.cpp  test_advt.cpp  test_batl.cpp  test_cale.cpp  test_cexc.cpp  test_cgen.cpp  test_char.cpp  test_coin.cpp  test_cycl.cpp  test_dice.cpp  test_dict.cpp  test_encu.cpp  test_erro.cpp  test_expe.cpp  test_hitp.cpp  test_hols.cpp  test_inve.cpp  test_monb.cpp  test_mons.cpp  test_mrkt.cpp  test_prof.cpp  test_racs.cpp  test_savt.cpp  test_skil.cpp  test_skst.cpp  test_splb.cpp  test_stor.cpp  test_tabi.cpp  test_tabl.cpp  test_thac.cpp  test_trea.cpp  test_tund.cpp  test_vali.cpp
